Update prop-types to use prop-types package

--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "homepage": "https://github.com/radiegtya/react-native-webbrowser#readme",
   "dependencies": {
     "react-native-loading-spinner-overlay": "0.4.1"
+  },
+  "peerDependencies": {
+    "prop-types": "^15.6.1"
   }
 }
